[package]
name = "eager-alarm-edge"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
color-backtrace = "0.7.2"
dirs = "6"
dotenvy = "0.15"
rumqttc = { version = "0.25.1", features = ["url", "websocket"] }
rustls-native-certs = "0.8.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
tokio-rustls = "0.26.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
